apps/shop/shipping/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-shipping-prod
spec:
  host: shop-shipping.shop-shipping.svc.cluster.local
  subsets:
  - name: shop-shipping-prod
    labels:
      app: shop-shipping
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-shipping-prod-p1a
    labels:
      app: shop-shipping
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
